test/success/echo-2.dsk
let echo2: fn = () -> int
    return 2

assert(echo2() == 2)
