test/error/fn-arg-type-mismatch.dsk
let f = (x: int) -> void
    return
f("hello")
